Beta 6 add log (#33)
Add lombok logs