@@ -7,18 +7,15 @@ import com.halushko.kinocat.core.handlers.input.InputMessageHandler;
 import com.halushko.kinocat.core.rabbit.RabbitMessage;
 import com.halushko.kinocat.core.rabbit.RabbitUtils;
 import org.apache.commons.io.FileUtils;
-import org.apache.log4j.Logger;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.UUID;
 
-import static com.halushko.kinocat.core.rabbit.RabbitMessage.KEYS.FILE_NAME;
-import static com.halushko.kinocat.core.rabbit.RabbitMessage.KEYS.FILE_PATH;
-
+@Slf4j
 public class UserMessageHandler extends InputMessageHandler {
     private static final String FILE_URL_PREFIX = String.format("%s%s/", "https://api.telegram.org/file/bot", System.getenv("BOT_TOKEN"));
 
@@ -34,17 +31,17 @@ public class UserMessageHandler extends InputMessageHandler {
                 handleTorrent(rabbitMessage);
             }
         } catch (Exception e) {
-            Logger.getRootLogger().error("During message handle got an error: ", e);
+            log.error("During message handle got an error: ", e);
         }
     }
 
     protected void handleTorrent(RabbitMessage rm) throws MalformedURLException {
         long fileSize = Long.parseLong(rm.getValue("SIZE"));
         if (fileSize > 5242880L) {
-            Logger.getRootLogger().warn(String.format("The file size is too big for .torrent (more than 0.5 Mb). Size = %s bytes", fileSize));
+            log.warn(String.format("The file size is too big for .torrent (more than 0.5 Mb). Size = %s bytes", fileSize));
             return;
         }
-        URL fileUrl = new URL(FILE_URL_PREFIX + rm.getValue(RabbitMessage.KEYS.FILE_PATH));
+        URL fileUrl = java.net.URI.create(FILE_URL_PREFIX + rm.getValue(RabbitMessage.KEYS.FILE_PATH)).toURL();
         long userId = rm.getUserId();
         String fileName = String.format("%s%s", rm.getValue("FILE_ID"), ".torrent");
 
